5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4254/executions/1638_2449.log
== TEST (2019-04-11 10:26:07) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))

x = ((c*e - b*f)/a*e - b*d)
y = ((a*f - c*d)/a*e - b*d)
if((a*e - b*f)!=0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- OUTPUT:
-100.0
-100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:27:30) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))

x = ((c*e - b*f)/a*e - b*d)
y = ((a*f - c*d)/a*e - b*d)
if((a*e - b*f)!=0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- OUTPUT:
-100.0
-100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:30:01) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))

x = (c*e - b*f)/a*e - b*d
y = (a*f - c*d)/a*e - b*d
if(a*e - b*f!=0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- OUTPUT:
-100.0
-100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:31:16) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))

x = (c*e - b*f)/a*e - b*d
y = (a*f - c*d)/a*e - b*d
if(a*e - b*f=0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
File "XXXX", line 10
    if(a*e - b*f=0):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:31:33) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))

x = (c*e - b*f)/a*e - b*d
y = (a*f - c*d)/a*e - b*d
if(a*e - b*f = = 0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
File "XXXX", line 10
    if(a*e - b*f = = 0):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:31:41) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))

x = (c*e - b*f)/a*e - b*d
y = (a*f - c*d)/a*e - b*d
if(a*e - b*f == 0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- OUTPUT:
-100.0
-100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:48:52) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))


if(a*e - b*f == 0):
	print("Nao tem solucao")
else:
	x = (c*e - b*f)/a*e - b*d
	y = (a*f - c*d)/a*e - b*d
	
	print(x)
	print(y)
-- OUTPUT:
-100.0
-100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:50:47) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))


if(a*e - b*f == 0):
	print("Nao tem solucao")
else:
	x = (c*e - b*f)/a*e - b*d
	y = (a*f - c*d)/a*e - b*d
	
	print(x)
	print(y)
-- EXECUTION TIME:
0.162135
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
-100.0
-100.0
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
400.0
-3692.0
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-4853.333333333333
-9242.666666666666
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:56:49) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))


if(a*e - b*f == 0):
	print("Nao tem solucao")
else:
	x = (c*e - b*f)/(a*e - b*d)
	y = (a*f - c*d)/(a*e - b*d
	print(x)
	print(y)
-- ERROR:
File "XXXX", line 14
    print(x)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:57:22) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))


if(a*e - b*f == 0):
	print("Nao tem solucao")
else:
	x = ((c*e - b*f)/(a*e - b*d))
	y = ((a*f - c*d)/(a*e - b*d))
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    x = ((c*e - b*f)/(a*e - b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:57:35) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))


if(a*e - b*f == 0):
	print("Nao tem solucao")
else:
	x = ((c*e - b*f)/(a*e - b*d))
	y = ((a*f - c*d)/(a*e - b*d))
	print(x)
	print(y)
-- EXECUTION TIME:
0.18173
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 12, in <module>
    x = ((c*e - b*f)/(a*e - b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:57:56) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))


if(a*e - b*f == 0):
	print("Nao tem solucao")
else:
	x = ((c*e - b*f)/(a*e - b*d))
	y = ((a*f - c*d)/(a*e - b*d))
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    x = ((c*e - b*f)/(a*e - b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:58:18) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))


if(a*e - b*f == 0):
	print("Nao tem solucao")
else:
	x = ((c*e - b*f)/(a*e - b*d))
	y = ((a*f - c*d)/(a*e - b*d))
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    x = ((c*e - b*f)/(a*e - b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:58:23) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))


if(a*e - b*f == 0):
	print("Nao tem solucao")
else:
	x = ((c*e - b*f)/(a*e - b*d))
	y = ((a*f - c*d)/(a*e - b*d))
	print(x)
	print(y)
-- EXECUTION TIME:
0.217218
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 12, in <module>
    x = ((c*e - b*f)/(a*e - b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:59:12) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))


if(a*e - b*f == 0):
	print("Nao tem solucao")
else:
	x = (c*e - b*f)/(a*e - b*d)
	y = (a*f - c*d)/(a*e - b*d)
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    x = (c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:59:22) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))


if(a*e - b*f == 0):
	print("Nao tem solucao")
else:
	x = (c*e - b*f)/(a*e - b*d)
	y = (a*f - c*d)/(a*e - b*d)
	print(x)
	print(y)
-- EXECUTION TIME:
0.206491
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 12, in <module>
    x = (c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:03:00) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))


if(a*e - b*f != 0):
	x = (c*e - b*f)/(a*e - b*d)
	y = (a*f - c*d)/(a*e - b*d)
	print(x)
	print(y
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.236044
-- ERROR:
  File "/home/codebench/codes/1638/2449/main.py", line 14
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:03:06) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))


if(a*e - b*f != 0):
	x = (c*e - b*f)/(a*e - b*d)
	y = (a*f - c*d)/(a*e - b*d)
	print(x)
	print(y
else:
	print("Nao tem solucao")
-- ERROR:
File "XXXX", line 14
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:03:43) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))


if(a*e - b*f != 0):
	x = (c*e - b*f)/(a*e - b*d)
	y = (a*f - c*d)/(a*e - b*d)
	print(x)
	print(y

else:
	print("Nao tem solucao")
-- ERROR:
File "XXXX", line 15
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:04:13) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))


if(a*e - b*f != 0):
	x = (c*e - b*f)/(a*e - b*d)
	y = (a*f - c*d)/(a*e - b*d)
	print(x)
	print(y

else:
	print("Nao tem solucao")
-- ERROR:
File "XXXX", line 15
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:04:55) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))


if(a*e - b*f != 0):
	x = (c*e - b*f)/(a*e - b*d)
	y = (a*f - c*d)/(a*e - b*d)
	print(x)
	print(y)

else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    x = (c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:05:05) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))


if(a*e - b*f != 0):
	x = (c*e - b*f)/(a*e - b*d)
	y = (a*f - c*d)/(a*e - b*d)
	print(x)
	print(y)

else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.18755
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 10, in <module>
    x = (c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:12:51) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))


if((a*e - b*f) != 0):
	x = (c*e - b*f)/(a*e - b*d)
	y = (a*f - c*d)/(a*e - b*d)
	print(x)
	print(y)

else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    x = (c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:13:16) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))


if((a*e - b*f) != 0):
	x = (c*e - b*f)/(a*e - b*d)
	y = (a*f - c*d)/(a*e - b*d)
	print(x)
	print(y)

else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    x = (c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:13:42) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))


if((a*e - b*f) != 0):
	x = (c*e - b*f)/(a*e - b*d)
	y = (a*f - c*d)/(a*e - b*d)
	print(x)
	print(y)

else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.148658
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 10, in <module>
    x = (c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:18:23) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))


if((a*e - b*d) != 0):
	x = (c*e - b*f)/(a*e - b*d)
	y = (a*f - c*d)/(a*e - b*d)
	print(x)
	print(y)

else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.200309
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
